--- a/Chuyen_Activity/app/src/main/res/layout/activity_page2.xml
+++ b/Chuyen_Activity/app/src/main/res/layout/activity_page2.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@color/black"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView2"
+
+    <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:background="#3F51B5"
-        android:paddingTop="30dp"
-        android:text="Page 2"
-        android:textAlignment="center"
-        android:textSize="30dp"
-        android:textStyle="bold" />
+        android:layout_height="307dp"
+        app:srcCompat="@drawable/anh_hello_an_tuong_dep_nhat_020638880" />
 
     <Button
         android:id="@+id/btn_page2"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="center"
-        android:text="Chuyển Lại Page1" />
+        android:text="Open Page2" />
 </LinearLayout>
